[GStreamer] media-elements/loading-the-media-resource/resource-selection-source-media-env-change.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=309434

Reviewed by Xabier Rodriguez-Calvar.

This patch refactors the TrackPrivateBaseGStreamer data in a new class that can be used as a weak
pointer for GObject signal handlers. TrackPrivateBaseGStreamer itself can't be made WeakPtr-able
because it is part of mixins inheriting from TrackPrivateBase which is a
ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr.

Canonical link: https://commits.webkit.org/308971@main